# django-absurd

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.pg_cron  MANIFEST.in  README.md  compose.yaml  pyproject.toml  renovate.json  tox.ini  zensical.toml
.claude/commands/: dream.md
.github/workflows/: ci.yml  docs.yml  pre-commit.yml  publish.yml  renovate.yml  test.yml
django_absurd/: AGENTS.md  __init__.py  admin.py  admin_views.py  apps.py  backends.py  checks.py  cleanup.py  connection.py  context.py  events.py  exceptions.py  flush.py  models.py  params.py  pgcron.py  pytest_plugin.py  queues.py  routers.py  scheduler.py  tasks.py  test.py  validators.py  worker.py
django_absurd/management/: base.py
django_absurd/migrations/: 0001_initial_0_4_0.py  0001_initial_0_4_0.sql  0002_create_admin_views.py  0002_scheduledjob.py  0003_run_scheduled_function.py
django_absurd/pg_cron/: __init__.py  admin.py  apps.py  checks.py  choices.py  models.py  reconcile.py  signals.py  validators.py
docs/: HISTORY.md  WHY.md
docs/plans/: 2026-06-19-configurable-absurd-database.md  2026-06-19-queue-models.md  2026-06-19-tasks-api-enqueue.md  2026-06-22-tasks-api-result-retrieval.md  2026-06-24-async-worker.md  2026-06-24-auto-create-queues.md  2026-06-24-dream-knowledge-distillation.md  2026-06-25-admin-queue-introspection.md  2026-06-25-orm-queue-table-access.md  2026-06-29-scheduler-beat.md  2026-07-03-pgcron-scheduler.md  2026-07-06-pgcron-revdiff-followups.md  2026-07-06-test-suite-core-pgcron-fork.md  2026-07-07-admin-definable-schedules-phase-a.md  2026-07-07-examples-nanodjango-three-apps.md  2026-07-07-pgcron-schedule-admin.md  2026-07-09-admin-writable-schedules-phase-b.md  2026-07-14-typed-spawn-options-and-dynamic-queue.md  2026-07-15-two-step-scheduledtask-admin.md  2026-07-16-cleanup-helper.md  2026-07-16-declarative-cleanup-schedule.md  2026-07-17-single-absurd-backend.md  2026-07-18-durable-steps-and-sleep.md  2026-07-18-scheduler-from-app-presence.md  2026-07-19-events-await-emit.md  2026-07-21-sync-schedules-on-migrate.md  2026-07-22-absurd-db-autodetect.md
docs/specs/: 2026-06-19-host-dev-tox-matrix-design.md  2026-06-19-tasks-api-config-migration-design.md  2026-06-22-tasks-api-lazy-discovery-design.md  2026-06-22-tasks-api-result-retrieval-design.md  2026-06-22-tasks-api-spawn-options-design.md  2026-06-24-async-worker-design.md  2026-06-24-auto-create-queues-design.md  2026-06-24-dream-knowledge-distillation-design.md  2026-06-25-admin-queue-introspection-design.md  2026-06-25-orm-queue-table-access-design.md  2026-06-29-scheduler-design.md  2026-07-03-pgcron-scheduler-design.md  2026-07-07-admin-definable-schedules-design.md  2026-07-07-examples-nanodjango-three-apps-design.md  2026-07-07-pgcron-schedule-admin-design.md  2026-07-15-cleanup-task-design.md  2026-07-15-two-step-scheduledtask-admin-design.md  2026-07-16-declarative-cleanup-schedule-design.md  2026-07-17-single-absurd-backend-design.md  2026-07-18-durable-steps-and-sleep-design.md  2026-07-18-scheduler-from-app-presence-design.md  2026-07-19-events-await-emit-design.md  2026-07-21-pytest-plugin-design.md  2026-07-21-sync-schedules-on-migrate-design.md
docs/web/: cleanup.md  configuration.md  cron-jobs.md  durable-workflows.md  how-it-works.md  index.md  scheduling.md  tasks.md  testing.md  workflows.md
examples/: Dockerfile  README.md  app.py  compose.yaml  manage.py  pyproject.toml
examples/beat/: Dockerfile  README.md  app.py  compose.yaml  pyproject.toml  pytest.toml
examples/beat/tests/: conftest.py  test_beat.py
examples/config/: settings.py  urls.py
examples/demo/: tasks.py
examples/demo/management/commands/: enqueue_demo.py
examples/demo/migrations/: 0001_pg_cron.py
examples/demo_project/: settings.py
examples/initdb.d/: 01_pgcron.sql
examples/migrations/: 0001_pgcron.py
examples/pg_cron/: Dockerfile  README.md  app.py  compose.yaml  pyproject.toml  pytest.toml
examples/pg_cron/tests/: conftest.py  test_pg_cron.py
examples/web/: Dockerfile  README.md  app.py  compose.yaml  pyproject.toml  pytest.toml  start.sh
examples/web/tests/: test_absurd_cleanup.py  test_add.py  test_views.py
tests/: admin.py  atasks.py  backends.py  conftest.py  fixtures.py  import_boom.py  jobs.py  models.py  raises_on_import.py  settings.py  tasks.py  test_absurd_sync_crons_command.py  test_admin_backend_resolve.py  test_admin_checks.py  test_admin_http.py  test_admin_models.py  test_admin_refresh.py  test_admin_views.py  test_app.py  test_async_worker.py  test_backend.py  test_checks.py  test_enqueue.py  test_migrations.py  test_models.py  test_orm_models.py  test_orm_views.py  test_packaging.py  test_params.py  test_pg_cron_checks.py  test_pg_cron_e2e.py  test_pg_cron_infra.py  test_pg_cron_naming.py  test_pg_cron_options.py  test_pg_cron_post_migrate.py  test_pg_cron_sync_jobs.py  test_pg_cron_sync_rows.py  test_pg_cron_teardown.py  test_pgcron_checks.py  test_pgcron_e2e.py  (+19 more)
tests/core/: conftest.py  pytest.toml  settings.py  test_admin_backend_resolve.py  test_admin_checks.py  test_admin_models.py  test_admin_views.py  test_app.py  test_async_worker.py  test_backend.py  test_checks.py  test_cleanup.py  test_durable.py  test_enqueue.py  test_events.py  test_migrations.py  test_models.py  test_orm_models.py  test_orm_views.py  test_packaging.py  test_params.py  test_pytest_plugin.py  test_pytest_plugin_no_db.py  test_queue_sync.py  test_results.py  test_router_default.py  test_scheduler.py  test_scheduler_app_checks.py  test_scheduler_checks.py  test_worker.py
tests/migrations/: 0001_initial.py
tests/multidb/: conftest.py  pytest.toml  settings.py  test_check.py  test_router.py
tests/pg_cron/: conftest.py  live_settings.py  pytest.toml  settings.py  subprocess_migrate.py  tasks.py  test_absurd_sync_crons_command.py  test_cleanup_schedule.py  test_cross_source_coexistence.py  test_orm_models.py  test_pg_cron_checks.py  test_pg_cron_e2e.py  test_pg_cron_infra.py  test_pg_cron_naming.py  test_pg_cron_options.py  test_pg_cron_post_migrate.py  (+11 more)
(+67 files in other folders)
