[build-system]
build-backend = "hatchling.build"
requires = ["hatch-vcs==0.5.0", "hatchling==1.30.1"]

[dependency-groups]
dev = [
  "absurdctl==0.4.0",
  "build==1.5.0",
  "django-coverage-plugin==3.2.2",
  "django-stubs==6.0.5",
  "hatch-vcs==0.5.0",
  "hatchling==1.30.1",
  "mypy==2.1.0",
  "psycopg[binary]==3.3.4",
  "pytest-cov==7.1.0",
  "pytest-django==4.12.0",
  "pytest-socket==0.8.0",
  "pytest==9.1.0",
  "ruff==0.15.17",
]

[project]
authors = [
  {name = "Marc Gibbons", email = "marc@lincolnloop.com"},
  {name = "Lincoln Loop", email = "info@lincolnloop.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Distributed Computing",
  "Typing :: Typed",
]
dependencies = [
  "absurd-sdk>=0.4.0,<0.5.0",
  "Django>=6.0",
]
description = "Django integration for Absurd, the Postgres-native workflow engine."
dynamic = ["version"]
keywords = [
  "absurd",
  "background-jobs",
  "django",
  "postgres",
  "queue",
  "tasks",
  "workflow",
  "workflow-engine",
]
license = "MIT"
license-files = ["LICENSE"]
name = "django-absurd"
readme = "README.md"
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/lincolnloop/django-absurd"
Issues = "https://github.com/lincolnloop/django-absurd/issues"
Repository = "https://github.com/lincolnloop/django-absurd"

[tool.coverage.report]
exclude_lines = [
  "if TYPE_CHECKING:",
  "if t.TYPE_CHECKING:",
  "pragma: no cover",
  "raise NotImplementedError",
]
skip_covered = true

[tool.coverage.run]
branch = true
omit = [
  # Router suite runs separately (own config, no --cov); counting it here
  # would report its files as 0% in the main run.
  "tests/multidb/*",
]
plugins = [
  "django_coverage_plugin",
]
source = ["django_absurd", "tests"]

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.hatch.build.targets.sdist]
# Allowlist — only the package ships in the sdist (plus the always-included
# pyproject.toml, README, and LICENSE). No git-tracked-file sweep.
include = ["django_absurd"]

[tool.hatch.build.targets.wheel]
packages = ["django_absurd"]

[tool.hatch.version]
source = "vcs"

[tool.mypy]
exclude = [
  "^build/",
  "^dist/",
  "^\\.tox/",
]
plugins = ["mypy_django_plugin.main"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
addopts = [
  "--allow-hosts=db,localhost,127.0.0.1",
  "--cov",
  "--cov-report=term",
  "--cov-report=xml",
  "--disable-socket",
  "--ignore=tests/multidb",
  "--junitxml=junit.xml",
  "--reuse-db",
  "--strict-markers",
]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = [
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in `**kwargs`
  "ARG001",  # Unused function argument
  "ARG002",  # Unused method argument
  "COM812",  # Check absence of trailing commas. Made redundant by formatter.
  "D",  # Missing or badly formatted docstrings
  "FBT",  # Flake Boolean Trap
  "PLR2004",  # Allow "magic values"
  "RUF012",  # Mutable class attributes
]
select = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
"**/migrations/*" = [
  "E501",  # Allow exceeded line length in migrations.
]
"tests/**/*" = [
  "ANN",  # No type annotations required in tests
  "E501",  # Allow long lines in tests
  "S101",  # Allow use of asserts
  "S603",  # Allow subprocess calls in tests
  "SLF001",  # Allow private member access in tests (e.g. _meta)
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.uv]
# Mirror Renovate's minimumReleaseAge cooloff for local/CI resolution.
exclude-newer = "7 days"
