[build-system]
build-backend = "hatchling.build"
requires = ["hatch-vcs==0.5.0", "hatchling==1.31.0"]

[dependency-groups]
dev = [
  "absurdctl==0.4.0",
  "beautifulsoup4==4.15.0",
  "build==1.5.0",
  "django-coverage-plugin==3.2.2",
  "django-stubs==6.0.7",
  "freezegun==1.5.5",
  "hatch-vcs==0.5.0",
  "hatchling==1.31.0",
  "mypy==2.3.0",
  "psycopg[binary]==3.3.4",
  "pytest-cov==7.1.0",
  "pytest-django==4.12.0",
  "pytest-socket==0.8.0",
  "pytest==9.1.1",
  "ruff==0.15.21",
  "types-croniter==6.2.4.20260711",
]

[project]
authors = [
  {name = "Marc Gibbons", email = "marc@lincolnloop.com"},
  {name = "Lincoln Loop", email = "info@lincolnloop.com"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Distributed Computing",
  "Typing :: Typed",
]
dependencies = [
  "absurd-sdk>=0.4.0,<0.5.0",
  "croniter>=3.0",
  "Django>=6.0",
]
description = "Django integration for Absurd, the Postgres-native workflow engine."
dynamic = ["version"]
keywords = [
  "absurd",
  "background-jobs",
  "django",
  "postgres",
  "queue",
  "tasks",
  "workflow",
  "workflow-engine",
]
license = "MIT"
license-files = ["LICENSE"]
name = "django-absurd"
readme = "README.md"
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/lincolnloop/django-absurd"
Issues = "https://github.com/lincolnloop/django-absurd/issues"
Repository = "https://github.com/lincolnloop/django-absurd"

# exclude_also ADDS to coverage's built-in defaults (pragma: no cover, `...` stub
# bodies, `if TYPE_CHECKING:`) rather than replacing them; keep the `t.`-prefixed
# TYPE_CHECKING form explicit since the default only matches the bare name.
[tool.coverage.report]
exclude_also = [
  "if t.TYPE_CHECKING:",
  # a `msg = "..."` line immediately followed by `raise NotImplementedError(msg)`
  # (the errmsg-lint idiom) — exclude the assignment too, not just the raise.
  'msg = [rf]?".*"\n\s*raise NotImplementedError\(msg\)',
]
skip_covered = true

[tool.coverage.run]
branch = true
omit = [
  "tests/multidb/*",
]
plugins = [
  "django_coverage_plugin",
]
source = ["django_absurd", "tests"]

[tool.django-stubs]
django_settings_module = "tests.pg_cron.settings"

[tool.hatch.build.targets.sdist]
# Allowlist — only the package ships in the sdist (plus the always-included
# pyproject.toml, README, and LICENSE). No git-tracked-file sweep.
include = ["django_absurd"]

[tool.hatch.build.targets.wheel]
packages = ["django_absurd"]

[tool.hatch.version]
source = "vcs"

[tool.mypy]
exclude = [
  "^build/",
  "^dist/",
  "^\\.tox/",
  "^examples/",
]
plugins = ["mypy_django_plugin.main"]
strict = true

[tool.pytest.ini_options]
addopts = [
  "--ignore=tests/core",
  "--ignore=tests/multidb",
  "--ignore=tests/pg_cron",
  "--strict-markers",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = [
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in `**kwargs`
  "ARG001",  # Unused function argument
  "ARG002",  # Unused method argument
  "COM812",  # Check absence of trailing commas. Made redundant by formatter.
  "D",  # Missing or badly formatted docstrings
  "FBT",  # Flake Boolean Trap
  "PLR2004",  # Allow "magic values"
  "RUF012",  # Mutable class attributes
]
select = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
"**/migrations/*" = [
  "E501",  # Allow exceeded line length in migrations.
]
"tests/**/*" = [
  "S101",  # Allow use of asserts
  "S603",  # Allow subprocess calls in tests
  "SLF001",  # Allow private member access in tests (e.g. _meta)
]

[tool.ruff.lint.flake8-import-conventions]
banned-from = [
  "datetime",  # Use `import datetime as dt`, not `from datetime import ...`
  "typing",  # Use `import typing as t`, not `from typing import ...`
]

[tool.ruff.lint.flake8-import-conventions.extend-aliases]
datetime = "dt"
typing = "t"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.uv]
# Mirror Renovate's minimumReleaseAge cooloff for local/CI resolution.
exclude-newer = "7 days"
